--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@chakra-ui/react": "^2.8.2",
+    "@sendgrid/mail": "^8.1.3",
+    "aws-sdk": "^2.1610.0",
+    "dotenv": "^16.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
